# tox-min-req

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yaml  test.yaml
tests/: __init__.py  test_integration.py  test_parsing_files.py
tests/data/: pyproject.toml  setup.cfg
tests/data/package_data/sample_package/: __init__.py
tox_min_req/: __init__.py  _parse_dependencies.py  _tox_plugin.py
